--- a/.github/workflows/cc.yml
+++ b/.github/workflows/cc.yml
@@ -15,5 +15,9 @@ jobs:
         with:
           java-version: 21
           distribution: temurin
+
+      - name: Make Gradle Wrapper executable
+        run: chmod +x ./gradlew
+
       - name: Build with Gradle
         run: ./gradlew check --info
