fix docker for action

--- a/docker/Dockerfile-db-test
+++ b/docker/Dockerfile-db-test
@@ -7,11 +7,11 @@ WORKDIR /app
 
 # Copy the schema and test data scripts into the PostgreSQL initialization directory
 # These scripts will run automatically when the container starts for the first time
-COPY SQL/create-schema.sql /docker-entrypoint-initdb.d/1_create.sql
-COPY SQL/insert-test-data.sql /docker-entrypoint-initdb.d/2_insert-test-data.sql
+COPY docker/SQL/create-schema.sql /docker-entrypoint-initdb.d/1_create.sql
+COPY docker/SQL/insert-test-data.sql /docker-entrypoint-initdb.d/2_insert-test-data.sql
 
 # Copy the wait-for-postgres script and ensure it's executable
-COPY --chown=postgres:postgres ./scripts/wait-for-postgres.sh ./bin/wait-for-postgres.sh
+COPY --chown=postgres:postgres docker/scripts/wait-for-postgres.sh ./bin/wait-for-postgres.sh
 RUN chmod +x ./bin/wait-for-postgres.sh
 
 # Expose PostgreSQL port to the host, to access the container’s services outside.
