--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -2,7 +2,8 @@ services:
   db-tests:
     container_name: db-tests
     build:
-      dockerfile: /Dockerfile-db-test
+      context: ../
+      dockerfile: docker/Dockerfile-db-test
     environment:
       - POSTGRES_USER=dbuser
       - POSTGRES_PASSWORD=2025-daw-leic52d-2025-leic52d-14
