--- a/frontEnd/package.json
+++ b/frontEnd/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.1",
     "vite": "^7.2.2"
   }
 }
