--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -7,7 +7,6 @@ http {
     default_type application/octet-stream;
 
     upstream jvm-static {
-        # FIX: Change 'agenda-jvm-1' to 'poker-jvm-1'
         server poker-jvm-1:8080;
     }
 
@@ -15,11 +14,26 @@ http {
         listen 3000;
         server_name localhost;
 
-        location / {
-            root /usr/share/nginx/html;
-            index index.html;
-            try_files $uri $uri/ /index.html;
-        }
+           root /usr/share/nginx/html;
+           index index.html;
 
-    }
+
+           location ~ ^/api(/.*)?$ {
+               rewrite ^/api(/.*)$ $1 break;
+               proxy_pass http://jvm-static;
+
+               proxy_set_header Host $host;
+               proxy_set_header X-Real-IP $remote_addr;
+               proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+               proxy_set_header X-Forwarded-Proto $scheme;
+           }
+
+           location /assets/ {
+               try_files $uri =404;
+           }
+
+           location / {
+               try_files $uri $uri/ /index.html;
+           }
+       }
 }
