--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -20,12 +20,17 @@ http {
 
            location ~ ^/api(/.*)?$ {
                rewrite ^/api(/.*)$ $1 break;
-               proxy_pass http://jvm-static;
 
+               proxy_pass http://jvm-static;
                proxy_set_header Host $host;
                proxy_set_header X-Real-IP $remote_addr;
                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
                proxy_set_header X-Forwarded-Proto $scheme;
+
+               proxy_buffering off;
+               proxy_cache off;
+               proxy_http_version 1.1;
+               proxy_set_header Connection '';
            }
 
            location /assets/ {
